Testing mainly removed some unused file

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,12 @@ mangasee123/*
 outSigPdf/*
 inputDiractory/*
 data/*
+CMakeFiles
 index.html
+loading.py
+*.cmake
+*[C]ache.*
+Makefile
 
 # Distribution / packaging
 .Python
